- Added /obsidian <vault_path> skill - Added auto install in the setup script for the skill

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ OBSIDIAN_PASSWORD=your_secure_password_here
 
 # Cloudflare R2 Configuration (for Remotely Save plugin)
 # Get from: Cloudflare Dashboard → R2 → Manage R2 API Tokens
+# Note: These are reference values only - configure Remotely Save plugin directly in Obsidian UI
+# Endpoint URL format: https://<ACCOUNT_ID>.r2.cloudflarestorage.com
 R2_ACCOUNT_ID=your_account_id_here
 R2_ACCESS_KEY_ID=your_access_key_here
 R2_SECRET_ACCESS_KEY=your_secret_key_here
-R2_BUCKET_NAME=obsidian-vault
+R2_BUCKET_NAME=obsidian-vault-sync
